// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector relation with inline relation column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int!
  product_id: Product
}

type Product @pgTable(name: \\"product\\") {
  description: String!
  id: Int!
}"
`;

exports[`Introspector relation with inline relation column NOT NULL 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int!
  product_id: Product!
}

type Product @pgTable(name: \\"product\\") {
  description: String!
  id: Int!
}"
`;

exports[`Introspector relation with relation table 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int!
  product: [Product!]! @relation(name: \\"bill_product\\")
}

type Product @pgTable(name: \\"product\\") {
  bill: [Bill!]! @relation(name: \\"bill_product\\")
  id: Int!
  product: String!
}"
`;

exports[`Introspector relation with relation table with extra column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int!
}

type Bill_product @pgTable(name: \\"bill_product\\") {
  bill_id: Bill
  product_id: Product
  some_other_column: String!
}

type Product @pgTable(name: \\"product\\") {
  id: Int!
  product: String!
}"
`;
